List participants and tidy up