@@ -1,2 +1,2 @@
 #!/bin/bash
-java --add-opens java.base/sun.nio.ch=ALL-UNNAMED -jar admin-uber.jar
+java -jar admin-uber.jar
